css/game-pension-style.css
/* ... */
#ResultWorkYears,
#ResultPayment {
  margin-top: 20px;
  margin-right: 10px;
}

@media screen and (max-width: 600px) {
  #ResultWorkYears,
  #ResultPayment {
    margin: 40px 15px;
  }
}

#ResultWorkYears .min:after,
#ResultWorkYears .max:after,
#ResultWorkYears .value:after {
  content: " Jahre";
}

#ResultPayment .min:after,
#ResultPayment .max:after,
#ResultPayment .value:after {
  content: " Euro";
}


#GameOverScreen {
  /* padding: 0 30px 5px 30px; */
  margin-bottom: 0;
  padding-bottom: 0px;
}

#GameOverScreen h1 {
  font-size: 26px;
  color: red;
  margin-bottom: 20px;
  font-weight: bold;
  margin-top: 30px;
}

#GameOverScreen p {
  /* margin-bottom: 20px; */
  font-size: 18px;
  margin-bottom: 20px;
  line-height: 150%;
}

.ui-dialog {
    -webkit-box-shadow: 0px 0px 8px 0px rgba(50, 50, 50, 0.75);
    -moz-box-shadow:    0px 0px 8px 0px rgba(50, 50, 50, 0.75);
    box-shadow:         0px 0px 8px 0px rgba(50, 50, 50, 0.75);
}

.ui-widget-overlay {
    background: black;
}

